Implement comment system for blog posts

--- a/django_blog/blog/templates/blog/post_details.html
+++ b/django_blog/blog/templates/blog/post_details.html
@@ -3,3 +3,22 @@
 <p>Author: {{ post.author.username }}</p>
 <a href="{% url 'post-update' post.pk %}">Edit</a>
 <a href="{% url 'post-delete' post.pk %}">Delete</a>
+<h3>Comments</h3>
+{% for comment in object.comments.all %}
+    <div>
+        <p>{{ comment.author.username }}: {{ comment.content }}</p>
+        <small>{{ comment.created_at }}</small>
+        {% if comment.author == user %}
+            <a href="{% url 'comment-update' comment.pk %}">Edit</a>
+            <a href="{% url 'comment-delete' comment.pk %}">Delete</a>
+        {% endif %}
+    </div>
+{% empty %}
+    <p>No comments yet.</p>
+{% endfor %}
+
+{% if user.is_authenticated %}
+    <a href="{% url 'comment-create' object.pk %}">Add Comment</a>
+{% else %}
+    <p><a href="{% url 'login' %}">Login</a> to add a comment.</p>
+{% endif %}
