--- a/django_blog/blog/templates/blog/post_details.html
+++ b/django_blog/blog/templates/blog/post_details.html
@@ -22,3 +22,9 @@
 {% else %}
     <p><a href="{% url 'login' %}">Login</a> to add a comment.</p>
 {% endif %}
+
+<p>Tags: 
+    {% for tag in post.tags.all %}
+        <a href="{% url 'posts-by-tag' tag.name %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+    {% endfor %}
+</p>
